hot reloading working

--- a/src/modules/checkout/packages/sample-app/public/index.html
+++ b/src/modules/checkout/packages/sample-app/public/index.html
@@ -16,5 +16,6 @@
     <div id="root"></div>
 
   </body>
-  <script src="lib/connect/imtbl-connect-widget.js"></script>
+  <!-- This is commented out as we are importing the script directly from dist in the ui/connect widget-->
+  <!-- <script src="lib/connect/imtbl-connect-widget.js"></script> -->
 </html>
