--- a/packages/economy/playground/src/index.html
+++ b/packages/economy/playground/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.scss" />
   </head>
   <body>
-    <imtbl-craft-button>
+    <!-- <imtbl-craft-button>
       <button>Craft Button</button>
     </imtbl-craft-button>
     <imtbl-craft-connect>
@@ -19,7 +19,15 @@
         providerPreference="metamask"
         theme="dark"
       ></imtbl-connect>
-    </imtbl-craft-connect>
+    </imtbl-craft-connect> -->
+    <imtbl-craft-passport
+      env="dev"
+      clientId="3Xt3vBGjrsuLnBKK3mtJsIU5j5WikfQC"
+      redirectUri="http://localhost:4200/"
+      logoutRedirectUri="http://localhost:4200/"
+    >
+      <button>Connect passport</button>
+    </imtbl-craft-passport>
     <script type="module" src="index.ts"></script>
   </body>
 </html>
