--- a/packages/checkout/widgets-sample-app/public/lib/examples/buy.html
+++ b/packages/checkout/widgets-sample-app/public/lib/examples/buy.html
@@ -2,10 +2,19 @@
 <html>
   <head>
     <title>Static Sample App</title>
-    <meta name="description" content="Example of how to use CheckoutSDK UI within static HTML">
+    <meta
+      name="description"
+      content="Example of how to use CheckoutSDK UI within static HTML"
+    />
   </head>
   <body>
-    <imtbl-buy providerPreference="metamask" theme="light" orderId="6453"></imtbl-buy>
+    <h1>Checkout Buy (Static)</h1>
+    <br />
+    <imtbl-buy
+      providerPreference="metamask"
+      theme="dark"
+      orderId="6453"
+    ></imtbl-buy>
   </body>
   <script defer src="../js/imtbl-checkout.js"></script>
 </html>
