--- a/packages/checkout/widgets-sample-app/public/lib/examples/connect.html
+++ b/packages/checkout/widgets-sample-app/public/lib/examples/connect.html
@@ -2,9 +2,14 @@
 <html>
   <head>
     <title>Static Sample App</title>
-    <meta name="description" content="Example of how to use CheckoutSDK UI within static HTML">
+    <meta
+      name="description"
+      content="Example of how to use CheckoutSDK UI within static HTML"
+    />
   </head>
   <body>
+    <h1>Checkout Connect (Static)</h1>
+    <br />
     <imtbl-connect providerPreference="metamask" theme="dark"></imtbl-connect>
   </body>
   <script defer src="../js/imtbl-checkout.js"></script>
