--- a/packages/checkout/widgets-sample-app/public/lib/examples/example.html
+++ b/packages/checkout/widgets-sample-app/public/lib/examples/example.html
@@ -2,10 +2,15 @@
 <html>
   <head>
     <title>Static Sample App</title>
-    <meta name="description" content="Example of how to use CheckoutSDK UI within static HTML">
+    <meta
+      name="description"
+      content="Example of how to use CheckoutSDK UI within static HTML"
+    />
   </head>
   <body>
-    <imtbl-example providerPreference="metamask" theme="light"></imtbl-example>
+    <h1>Checkout Example (Static)</h1>
+    <br />
+    <imtbl-example providerPreference="metamask" theme="dark"></imtbl-example>
   </body>
   <script defer src="../js/imtbl-checkout.js"></script>
 </html>
