--- a/packages/checkout/widgets-sample-app/public/lib/examples/wallet-webview.html
+++ b/packages/checkout/widgets-sample-app/public/lib/examples/wallet-webview.html
@@ -13,11 +13,11 @@
     </style>
   </head>
   <body>
-    <h1>Checkout Example (WebView)</h1>
+    <h1>Checkout Wallet (WebView)</h1>
     <iframe
       height="500"
       width="500"
-      src="http://localhost:3001/example?theme=dark"
+      src="http://localhost:3001/wallet?theme=dark"
     ></iframe>
   </body>
 </html>
