[Economy] Migrate economy module to yarn workspaces (#120)

--- a/packages/economy/playground/src/index.html
+++ b/packages/economy/playground/src/index.html
@@ -4,15 +4,14 @@
     <meta charset="utf-8" />
     <title>Playground</title>
     <base href="/" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="stylesheet" href="/src/styles.scss" />
+    <link rel="stylesheet" href="styles.scss" />
   </head>
   <body>
     <imtbl-craft-button>
       <button>Craft Button</button>
     </imtbl-craft-button>
-    <script type="module" src="/src/index.ts"></script>
+
+    <script type="module" src="index.ts"></script>
   </body>
 </html>
