--- a/packages/checkout/widgets/public/index.html
+++ b/packages/checkout/widgets/public/index.html
@@ -5,16 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Immutable Checkout Widgets"
-    />
-
+    <meta name="description" content="Immutable Checkout Widgets" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
   </body>
-
 </html>
