async loading working

--- a/packages/checkout/widgets-sample-app/public/index.html
+++ b/packages/checkout/widgets-sample-app/public/index.html
@@ -14,5 +14,5 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
-  <script defer src="/lib/js/imtbl-checkout.js"></script>
+  <!-- <script defer src="/lib/js/imtbl-checkout.js"></script> -->
 </html>
