--- a/packages/checkout/widgets-lib/public/index.html
+++ b/packages/checkout/widgets-lib/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Immutable Checkout Widgets" />
+    <meta http-equiv=”Content-Security-Policy” content="connect-src *" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
