add craft card upgrade page

--- a/packages/economy/playground/src/craft.html
+++ b/packages/economy/playground/src/craft.html
@@ -2,15 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Playground</title>
+    <title>Craft – Card Upgrade</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles.scss" />
   </head>
   <body>
-    <ul>
-      <li><a href="craft.html">Craft – Card Upgrade</a></li>
-      <li><a href="examples.html">other examples</a></li>
-    </ul>
+    Craft Page
+    <imtbl-craft-card-upgrade-widget></imtbl-craft-card-upgrade-widget>
+    <script defer type="module" src="index.ts"></script>
   </body>
 </html>
