adjust craft input type

--- a/packages/economy/playground/src/examples.html
+++ b/packages/economy/playground/src/examples.html
@@ -11,7 +11,7 @@
     <imtbl-craft-button>
       <button>Craft Button</button>
     </imtbl-craft-button>
-    <imtbl-craft-connect>
+    <!-- <imtbl-craft-connect>
       <button slot="connect-button">Craft Connect Wallet</button>
       <imtbl-connect
         slot="connect-widget"
@@ -27,8 +27,8 @@
       logoutRedirectUri="http://localhost:4200/"
     >
       <button>Connect passport</button>
-    </imtbl-craft-passport>
-    <script defer src="../public/js/imtbl-checkout-widgets.js"></script>
+    </imtbl-craft-passport> -->
+    <!-- <script defer src="../public/js/imtbl-checkout-widgets.js"></script> -->
     <script defer type="module" src="index.ts"></script>
   </body>
 </html>
