--- a/packages/checkout/widgets-sample-app/public/lib/examples/wallet-webview.html
+++ b/packages/checkout/widgets-sample-app/public/lib/examples/wallet-webview.html
@@ -17,7 +17,7 @@
     <iframe
       height="500"
       width="500"
-      src="http://localhost:3001/wallet?theme=dark"
+      src="http://localhost:3001/wallet?theme=dark&isSwapEnabled=true&isOnRampEnabled=false"
     ></iframe>
   </body>
 </html>
