Install bulma & create craft page wip

--- a/packages/economy/playground/src/craft.html
+++ b/packages/economy/playground/src/craft.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="styles.scss" />
   </head>
   <body>
-    Craft Page
-    <imtbl-craft-card-upgrade-widget></imtbl-craft-card-upgrade-widget>
+    <div class="p-4">
+      <h1 class="my-4 is-size-1">Craft Page</h1>
+      <imtbl-craft-card-upgrade-widget></imtbl-craft-card-upgrade-widget>
+    </div>
+
     <script defer type="module" src="index.ts"></script>
   </body>
 </html>
