--- a/packages/checkout/widgets-sample-app/public/lib/examples/wallet.html
+++ b/packages/checkout/widgets-sample-app/public/lib/examples/wallet.html
@@ -10,7 +10,11 @@
   <body>
     <h1>Checkout Wallet (Static)</h1>
     <br />
-    <imtbl-wallet providerPreference="metamask" theme="dark" useConnectWidget="true"></imtbl-wallet>
+    <imtbl-wallet
+      providerPreference="metamask"
+      theme="dark"
+      useConnectWidget="true"
+    ></imtbl-wallet>
   </body>
   <script defer src="../js/imtbl-checkout.js"></script>
 </html>
