--- a/packages/checkout/widgets-sample-app/public/lib/examples/buy.html
+++ b/packages/checkout/widgets-sample-app/public/lib/examples/buy.html
@@ -13,6 +13,7 @@
     <imtbl-buy
       providerPreference="metamask"
       theme="dark"
+      environment="sandbox"
       orderId="6453"
     ></imtbl-buy>
   </body>
