--- a/packages/checkout/widgets-sample-app/public/lib/examples/connect.html
+++ b/packages/checkout/widgets-sample-app/public/lib/examples/connect.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Checkout Connect (Static)</h1>
     <br />
-    <imtbl-connect providerPreference="metamask" theme="dark"></imtbl-connect>
+    <imtbl-connect providerPreference="metamask" theme="dark" environment="sandbox"></imtbl-connect>
   </body>
   <script defer src="../js/imtbl-checkout.js"></script>
 </html>
