--- a/packages/checkout/widgets-sample-app/public/lib/examples/swap.html
+++ b/packages/checkout/widgets-sample-app/public/lib/examples/swap.html
@@ -13,6 +13,7 @@
     <imtbl-swap
       providerPreference="metamask"
       theme="dark"
+      environment="sandbox"
       amount="50000000000000000000"
       fromContractAddress="0x7D1AfA7B718fb893dB30A3aBc0Cfc608AaCfeBB0"
       toContractAddress=""
