--- a/packages/checkout/widgets-sample-app/public/lib/examples/wallet.html
+++ b/packages/checkout/widgets-sample-app/public/lib/examples/wallet.html
@@ -13,6 +13,7 @@
     <imtbl-wallet
       providerPreference="metamask"
       theme="dark"
+      environment="sandbox"
       useConnectWidget="true"
     ></imtbl-wallet>
   </body>
