--- a/packages/checkout/widgets-sample-app/public/lib/examples/bridge.html
+++ b/packages/checkout/widgets-sample-app/public/lib/examples/bridge.html
@@ -13,6 +13,7 @@
     <imtbl-bridge
       providerPreference="metamask"
       theme="dark"
+      environment="sandbox"
       amount="50"
       fromContractAddress="0x7D1AfA7B718fb893dB30A3aBc0Cfc608AaCfeBB0"
       toNetwork="Ethereum"
