--- a/packages/checkout/widgets-sample-app/public/lib/examples/swap-webview.html
+++ b/packages/checkout/widgets-sample-app/public/lib/examples/swap-webview.html
@@ -15,9 +15,9 @@
   <body>
     <h1>Checkout Swap (WebView)</h1>
     <iframe
-      height="500"
-      width="500"
-      src="http://localhost:3001/swap?theme=dark"
+      height="650"
+      width="430"
+      src="http://localhost:3001/swap?theme=dark&environment=sandbox"
     ></iframe>
   </body>
 </html>
