--- a/packages/checkout/widgets-sample-app/public/lib/examples/wallet-webview.html
+++ b/packages/checkout/widgets-sample-app/public/lib/examples/wallet-webview.html
@@ -15,9 +15,9 @@
   <body>
     <h1>Checkout Wallet (WebView)</h1>
     <iframe
-      height="500"
-      width="500"
-      src="http://localhost:3001/wallet?theme=dark&isSwapEnabled=true&isOnRampEnabled=false&useConnectWidget=true"
+      height="650"
+      width="430"
+      src="http://localhost:3001/wallet?theme=dark&isSwapEnabled=true&isOnRampEnabled=false&useConnectWidget=true&environment=sandbox"
     ></iframe>
   </body>
 </html>
