re organise playground prototypes

--- a/packages/economy/playground/src/craft-v02.html
+++ b/packages/economy/playground/src/craft-v02.html
@@ -2,14 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Craft – Card Upgrade</title>
+    <title>Crafting v0.2</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles.scss" />
   </head>
   <body>
-    Craft Page
-    <imtbl-craft-card-upgrade-widget></imtbl-craft-card-upgrade-widget>
+    <h1>Crafting v0.2</h1>
     <script defer type="module" src="index.ts"></script>
   </body>
 </html>
