--- a/packages/economy/playground/src/craft-v01.html
+++ b/packages/economy/playground/src/craft-v01.html
@@ -2,16 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Playground</title>
+    <title>Crafting v0.1</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles.scss" />
   </head>
   <body>
-    <ul>
-      <li><a href="craft-v01.html">Crafting v0.1</a></li>
-      <li><a href="craft-v02.html">Crafting v0.2</a></li>
-      <li><a href="examples.html">archived examples</a></li>
-    </ul>
+    <h1>Crafting v0.1</h1>
+    <imtbl-craft-card-upgrade-widget></imtbl-craft-card-upgrade-widget>
+    <script defer type="module" src="index.ts"></script>
   </body>
 </html>
