add card upgrade widget components

--- a/packages/economy/playground/src/craft-v02.html
+++ b/packages/economy/playground/src/craft-v02.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h1>Crafting v0.2</h1>
+    <imtbl-card-upgrade-widget></imtbl-card-upgrade-widget>
     <script defer type="module" src="index.ts"></script>
   </body>
 </html>
