--- a/packages/economy/playground/src/craft-v02.html
+++ b/packages/economy/playground/src/craft-v02.html
@@ -6,6 +6,12 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles.scss" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@2.51.6/dist/full.css"
+      rel="stylesheet"
+      type="text/css"
+    />
   </head>
   <body>
     <h1>Crafting v0.2</h1>
