--- a/packages/economy/playground/.storybook/preview-head.html
+++ b/packages/economy/playground/.storybook/preview-head.html
@@ -4,3 +4,11 @@
   rel="stylesheet"
   type="text/css"
 />
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
+/>
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bulma-list@1.2.0/css/bulma-list.min.css"
+/>
