breakdown prototype into webcomponents

--- a/packages/economy/playground/.storybook/preview-head.html
+++ b/packages/economy/playground/.storybook/preview-head.html
@@ -43,7 +43,7 @@
   }
 
   .tree summary {
-    @apply cursor-pointer pl-2 relative;
+    @apply cursor-pointer pl-2 relative font-bold first-letter:uppercase text-lg;
 
     &::before {
       @apply block bg-black rounded-full w-8 h-8 text-white text-center leading-8 font-bold;
