set up global config and update base web component and wallet-web-component

--- a/packages/checkout/widgets-sample-app/public/lib/examples/wallet.html
+++ b/packages/checkout/widgets-sample-app/public/lib/examples/wallet.html
@@ -12,8 +12,7 @@
     <br />
     <imtbl-wallet
       providerPreference="metamask"
-      theme="dark"
-      environment="sandbox"
+      widgetConfig="{'theme': 'dark'}"
       useConnectWidget="true"
     ></imtbl-wallet>
   </body>
