removed web views from sample app

--- a/packages/checkout/widgets-sample-app/public/lib/examples/example-webview.html
+++ b/packages/checkout/widgets-sample-app/public/lib/examples/example-webview.html
@@ -17,7 +17,7 @@
     <iframe
       height="650"
       width="430"
-      src="http://localhost:3001/example?theme=dark&environment=sandbox"
+      src="http://localhost:3001/examples/dependency-injection?theme=light&environment=sandbox"
     ></iframe>
   </body>
 </html>
