remove walletProvider from connect widget

--- a/packages/checkout/widgets-sample-app/public/lib/examples/bridge.html
+++ b/packages/checkout/widgets-sample-app/public/lib/examples/bridge.html
@@ -11,7 +11,7 @@
     <h1>Checkout Bridge (Static)</h1>
     <br />
     <imtbl-bridge
-      providerPreference="metamask"
+      walletProvider="metamask"
       theme="dark"
       environment="sandbox"
       amount="50"
