--- a/packages/checkout/widgets-sample-app/public/lib/examples/buy.html
+++ b/packages/checkout/widgets-sample-app/public/lib/examples/buy.html
@@ -11,7 +11,7 @@
     <h1>Checkout Buy (Static)</h1>
     <br />
     <imtbl-buy
-      providerPreference="metamask"
+      walletProvider="metamask"
       theme="dark"
       environment="sandbox"
       orderId="6453"
