--- a/packages/checkout/widgets-sample-app/public/lib/examples/example.html
+++ b/packages/checkout/widgets-sample-app/public/lib/examples/example.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Checkout Example (Static)</h1>
     <br />
-    <imtbl-example providerPreference="metamask" theme="dark" environment="sandbox"></imtbl-example>
+    <imtbl-example walletProvider="metamask" theme="dark" environment="sandbox"></imtbl-example>
   </body>
   <script defer src="../js/imtbl-checkout.js"></script>
 </html>
