--- a/packages/checkout/widgets-sample-app/public/lib/examples/swap.html
+++ b/packages/checkout/widgets-sample-app/public/lib/examples/swap.html
@@ -11,7 +11,7 @@
     <h1>Checkout Swap (Static)</h1>
     <br />
     <imtbl-swap
-      providerPreference="metamask"
+      walletProvider="metamask"
       theme="dark"
       environment="sandbox"
       amount="50000000000000000000"
