--- a/packages/checkout/widgets-sample-app/public/lib/examples/wallet.html
+++ b/packages/checkout/widgets-sample-app/public/lib/examples/wallet.html
@@ -11,7 +11,7 @@
     <h1>Checkout Wallet (Static)</h1>
     <br />
     <imtbl-wallet
-      providerPreference="metamask"
+      walletProvider="metamask"
       widgetConfig="{'theme': 'dark'}"
       useConnectWidget="true"
     ></imtbl-wallet>
