feat: inlined scripts to ease bundling with game engines

--- a/packages/game-bridge/src/index.html
+++ b/packages/game-bridge/src/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="utf-8">
     <title>GameSDK Bridge</title>
-    <script type="module" src="./index.ts"></script>
+    <script type="module">
+        import "./index.ts";
+    </script>
 </head>
 
 <body>
